--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  shared_preferences: "^0.4.2"
+  flutter_webview_plugin: "^0.1.6"
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
